--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: METS 2 Primer
-description: Metadata Encoding and Transmission Standard (Version 2) Primer
+title: METS 2 Guide
+description: Metadata Encoding and Transmission Standard (Version 2) Guide
 author: METS Editorial Board
 remote_theme: just-the-docs/just-the-docs
 
 aux_links:
-  METS primer on GitHub: https://github.com/METS/METS-primer
+  METS guide on GitHub: https://github.com/METS/METS-guide
 
 defaults:
   -
